--- a/waybar/style.css
+++ b/waybar/style.css
@@ -38,6 +38,7 @@
 #bluetooth,
 #pulseaudio,
 #custom-omarchy,
+#custom-screenrecording-indicator,
 #custom-update {
   min-width: 12px;
   margin: 0 7.5px;
@@ -61,4 +62,14 @@ tooltip {
 
 .hidden {
   opacity: 0;
+}
+
+#custom-screenrecording-indicator {
+  min-width: 12px;
+  margin-left: 8.75px;
+  font-size: 12px;
+}
+
+#custom-screenrecording-indicator.active {
+  color: #a55555;
 }
