add elephant clipboard to waybar

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -36,7 +36,8 @@
 #pulseaudio,
 #custom-omarchy,
 #custom-screenrecording-indicator,
-#custom-update {
+#custom-update,
+#custom-clipboard {
   min-width: 12px;
   margin: 0 7.5px;
 }
